@@ -19,6 +19,7 @@ lib/clive/Host/Funnyhub.pm
 lib/clive/Host/Golem.pm
 lib/clive/Host/Google.pm
 lib/clive/Host/Liveleak.pm
+lib/clive/Host/Myubo.pm
 lib/clive/Host/Redtube.pm
 lib/clive/Host/Sevenload.pm
 lib/clive/Host/Spiegel.pm
@@ -50,6 +51,7 @@ t/14spiegel.t
 t/15ehrensenf.t
 t/16clipfish.t
 t/17funnyhub.t
+t/18myubo.t
 t/lib/Test/clive.pm
 tlinks/break.url
 tlinks/cctv.url
@@ -63,6 +65,7 @@ tlinks/gvideo.url
 tlinks/lastfm.url
 tlinks/liveleak.url
 tlinks/multi.lst
+tlinks/myubo.url
 tlinks/sload.url
 tlinks/spiegel.url
 tlinks/vimeo.url
